# local-japanese-to-english-subtitles-asr-llm

./: .gitignore  AMIRS_UI_REVAMP_subtitle-tool_main-ui_v1.0.md  AMIRS_UI_REVAMP_subtitle-tool_main-ui_v1.1.md  AMIR_GOAL_PLAN.md  CHANGELOG.md  README.md  pyproject.toml
docs/: asr-model-evaluation.md
scripts/: benchmark_dandy_models.py  build_windows_exe.ps1  generate_demo_screenshots.py  launch_ui.ps1  package_release_assets.py  run_quality_subtitle_job.py
src/local_subtitle_stack/: adaptive_transcription.py  app.py  asr_models.py  cli.py  config.py  domain.py  guards.py  integrations.py  launcher.py  pipeline.py  queue.py  service.py  ui.py  utils.py  web_ui.py
tests/: test_adaptive_transcription.py  test_asr_models.py  test_config.py  test_integrations.py  test_pipeline.py  test_queue.py  test_service.py  test_ui.py  test_web_ui.py
